# rfc.nvim

./: .gitignore  .luarc.json  Cargo.toml  README.md  justfile
.github/workflows/: lua.yml  rust.yml
artifacts/: libffi.dylib
benches/: Cargo.toml
benches/benches/: build_index.rs  build_term_frequencies.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: lib.rs
crates/ffi/: Cargo.toml
crates/ffi/src/: lib.rs
crates/tf_idf/: Cargo.toml
crates/tf_idf/src/: error.rs  fetch.rs  index.rs  lib.rs  parse.rs  path.rs  threadpool.rs
crates/threadpool/: Cargo.toml
crates/threadpool/src/: lib.rs
data/: rfc_index.txt
lua/rfsee/: ffi.lua  index.lua  init.lua  log.lua  parse.lua  rust.lua  tf_idf.lua  util.lua  window.lua
plugin/: rfsee.lua
tests/: search_index.lua
tests/generate-data/: Cargo.toml
tests/generate-data/src/: main.rs
