[package]
name = "rfsee"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Turner"]
description = "Search and view RFCs in Neovim and from the terminal."
readme = "../README.md"
repository = "https://github.com/matthewmturner/rfsee"
license = "MIT"
keywords = ["rfc", "cli"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.94"
rfsee-tf-idf = { path = "../tf_idf", version = "0.1" }
clap = { version = "4.5.23", features = ["derive"] }
serde_json = "1.0.133"
simd-json = "0.14.3"
directories = "5.0.1"
