[package]
name = "rfsee-tf-idf"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Turner"]
repository = "https://github.com/matthewmturner/rfsee"
description = "TF-IDF implementation for rfsee"
license = "MIT"
keywords = ["tf-idf"]

[dependencies]
regex = "1.11.1"
simd-json = "0.14.3"
anyhow = "1.0.94"
serde = "1.0.216"
directories = "5.0.1"
native-tls = "0.2.12"
